--- a/DeconRNASeq/workflow/docker/deconrnaseq/Dockerfile
+++ b/DeconRNASeq/workflow/docker/deconrnaseq/Dockerfile
@@ -5,5 +5,5 @@ RUN Rscript -e "install.packages('BiocManager')"
 
 RUN Rscript -e "BiocManager::install('DeconRNASeq', version = '3.8')"
 
-COPY bin/deconrnaseq.R /usr/local/bin/
-RUN chmod a+x /usr/local/bin/deconrnaseq.R
+COPY bin/* /usr/local/bin/
+RUN chmod a+x /usr/local/bin/*
