--- a/TCR_Inference/workflow/docker/mitcr_combine_and_clean_fastqs/Dockerfile
+++ b/TCR_Inference/workflow/docker/mitcr_combine_and_clean_fastqs/Dockerfile
@@ -1,11 +1,4 @@
-FROM ubuntu:16.04
-
-RUN apt-get update
-RUN echo "deb http://cran.rstudio.com/bin/linux/ubuntu xenial/" | tee -a /etc/apt/sources.list
-RUN gpg --keyserver keyserver.ubuntu.com --recv-key E084DAB9
-RUN gpg -a --export E084DAB9 | apt-key add -
-RUN apt-get update
-RUN apt-get -y install wget python
+FROM python:2.7
 
 WORKDIR /home/ubuntu/
 
