new docker file

--- a/Kallisto/workflow/docker/kallisto/Dockerfile
+++ b/Kallisto/workflow/docker/kallisto/Dockerfile
@@ -1,8 +1,36 @@
 FROM ubuntu:18.04
 
-RUN apt-get update && apt-get install -y wget
+RUN rm /bin/sh && ln -s /bin/bash /bin/sh
+RUN apt-get update
 
-RUN cd ~/ && wget https://github.com/pachterlab/kallisto/releases/download/v0.45.1/kallisto_linux-v0.45.1.tar.gz && \
-    tar -xzvf kallisto_linux-v0.45.1.tar.gz && rm kallisto_linux-v0.45.1.tar.gz && \
-    echo 'PATH="$PATH:$HOME/kallisto_linux-v0.45.1"' >> ~/.bashrc
+RUN DEBIAN_FRONTEND=noninteractive apt-get install --yes \
+ build-essential \
+ gcc-multilib \
+ apt-utils \
+ zlib1g-dev \
+ cmake \
+ libhdf5-dev \
+ git-all \
+ autoconf \
+ automake \
+ libcurl4-openssl-dev
+
+# Get latest source from releases
+WORKDIR /opt
+RUN git clone https://github.com/pachterlab/kallisto.git
+WORKDIR kallisto
+RUN git clone https://github.com/samtools/htslib
+RUN rm -rf -f build
+RUN rm -rf /ext/htslib
+RUN cp -r htslib /ext/
+WORKDIR /opt/kallisto/ext/htslib
+RUN autoconf && autoheader
+WORKDIR /opt/kallisto
+RUN mkdir build
+WORKDIR build
+RUN cmake ..
+RUN make
+RUN make install
+
+COPY Dockerfile /opt/.
 
