redid combine and clean fastq step

--- a/MiTCR/workflow/docker/mitcr_combine_and_clean_fastqs/Dockerfile
+++ b/MiTCR/workflow/docker/mitcr_combine_and_clean_fastqs/Dockerfile
@@ -1,7 +1,7 @@
 FROM python:2.7
 
-WORKDIR /home/ubuntu/
+RUN pip install --upgrade pip
+RUN pip install argparse
 
-RUN wget https://raw.githubusercontent.com/scottdbrown/TCR-from-RNAseq2015/12a9778aa38fd07757cd6a8d3d33806e42431d76/combineAndCleanFastq.py
-
-RUN chmod +x combineAndCleanFastq.py
+COPY bin/* /usr/local/bin/
+RUN chmod a+x /usr/local/bin/*
