--- a/MiTCR_post_processing/workflow/docker/mitcr_get_sample_summary_stats/Dockerfile
+++ b/MiTCR_post_processing/workflow/docker/mitcr_get_sample_summary_stats/Dockerfile
@@ -1,7 +1,4 @@
-FROM tailordev/pandas
+FROM python 3.7
 
-RUN pip3 install --upgrade pip
-RUN pip3 install argparse
-
-COPY bin/* /usr/local/bin/
-RUN chmod a+x /usr/local/bin/*
+COPY bin/sample_summary_stats.py /usr/local/bin/
+RUN chmod a+x /usr/local/bin/sample_summary_stats.py
