--- a/MiTCR_post_processing/workflow/docker/mitcr_get_sample_summary_stats/Dockerfile
+++ b/MiTCR_post_processing/workflow/docker/mitcr_get_sample_summary_stats/Dockerfile
@@ -1,4 +1,4 @@
-FROM python 3.7
+FROM python:3.7.4-stretch
 
 COPY bin/sample_summary_stats.py /usr/local/bin/
 RUN chmod a+x /usr/local/bin/sample_summary_stats.py
