updated docker image

--- a/Network_Analysis/workflow/docker/network_analysis/Dockerfile
+++ b/Network_Analysis/workflow/docker/network_analysis/Dockerfile
@@ -1,6 +1,7 @@
-FROM rocker/tidyverse:3.6.3
+FROM rocker/tidyverse:4.0.2
 
 RUN Rscript -e "install.packages('argparse')"
+RUN Rscript -e "install.packages('feather')"
 
 RUN Rscript -e "library(devtools);devtools::install_github('heimannch/abcnet', ref = 'fe0144c4649a7c7dc11299b69a69b68c91c802d9')"
 
