updated to new iatlas.api.client

--- a/utils/iAtlas_API/Docker/Dockerfile
+++ b/utils/iAtlas_API/Docker/Dockerfile
@@ -3,7 +3,7 @@ FROM rocker/tidyverse:4.0.2
 RUN Rscript -e "install.packages('argparse')"
 RUN Rscript -e "install.packages('feather')"
 
-RUN Rscript -e "library(devtools);devtools::install_github('CRI-iAtlas/iatlas.api.client')"
+RUN Rscript -e "library(devtools);devtools::install_github('CRI-iAtlas/iatlas.api.client', ref = '0.10.2')"
 
 COPY bin/* /usr/local/bin/
 RUN chmod a+x /usr/local/bin/*.R
