--- a/EPIC/workflow/docker/epic/Dockerfile
+++ b/EPIC/workflow/docker/epic/Dockerfile
@@ -1,6 +1,7 @@
-FROM rocker/tidyverse:3.6.1 
+FROM rocker/tidyverse:4.0.2 
 
 RUN Rscript -e "install.packages('argparse')"
+RUN Rscript -e "install.packages('arrow')"
 
 RUN Rscript -e "library(devtools);devtools::install_github('GfellerLab/EPIC', ref = 'v1.1')"
 
