--- a/utils/r_tidy_utils/Docker/Dockerfile
+++ b/utils/r_tidy_utils/Docker/Dockerfile
@@ -1,7 +1,7 @@
 FROM rocker/tidyverse:4.0.2
 
 RUN Rscript -e "install.packages('argparse')"
-RUN Rscript -e "install.packages('feather')"
+RUN Rscript -e "install.packages('arrow')"
 
 COPY bin/* /usr/local/bin/
 RUN chmod a+x /usr/local/bin/*.R
