--- a/Immune_Subtype_Clustering/workflow/docker/immune_subtype_clustering/Dockerfile
+++ b/Immune_Subtype_Clustering/workflow/docker/immune_subtype_clustering/Dockerfile
@@ -1,7 +1,7 @@
-FROM rocker/tidyverse:3.6.1
+FROM rocker/tidyverse:4.1.0 
 
 RUN Rscript -e "install.packages('argparse')"
-RUN Rscript -e "devtools::install_github('Gibbsdavidl/ImmuneSubtypeClassifier', ref = '30e6215c390bf12761d17cbc9647ac4527e319ba')"
+RUN Rscript -e "devtools::install_github('Gibbsdavidl/ImmuneSubtypeClassifier', ref = 'v0.1.1')"
 
 COPY bin/* /usr/local/bin/
 RUN chmod a+x /usr/local/bin/*.R
