--- a/Calculate_Mutation_Models/workflow/docker/calculate_mutation_models/Dockerfile
+++ b/Calculate_Mutation_Models/workflow/docker/calculate_mutation_models/Dockerfile
@@ -1,7 +1,7 @@
-FROM rocker/tidyverse:4.0.2 
+FROM rocker/tidyverse:4.1.0
 
 RUN Rscript -e "install.packages('argparse')"
-RUN Rscript -e "install.packages('feather')"
+RUN Rscript -e "install.packages('arrow')"
 
 COPY bin/* /usr/local/bin/
 RUN chmod a+x /usr/local/bin/*.R
